--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
                 <!-- Logo -->
                 <div class="logo" role="img" aria-label="RISE Coffee">
-                    <img src="../RISE_LOGO.avif" class="logo-img" alt="RISE Coffee Logo">
+                    <img src="RISE_LOGO.avif" class="logo-img" alt="RISE Coffee Logo">
                 </div>
 
                 <!-- Desktop Navigation (hidden on medium+small screens) -->
@@ -42,17 +42,17 @@
                 <div class="header-icons" aria-hidden="false">
                     <!-- Search button (hidden on medium+small) -->
                     <button class="icon-btn search" aria-label="Search">
-                        <img src="../search-icon.png" alt="" aria-hidden="true">
+                        <img src="search-icon.png" alt="" aria-hidden="true">
                     </button>
 
                     <!-- Account button (hidden on medium+small) -->
                     <button class="icon-btn account" aria-label="Account">
-                        <img src="../user-icon.png" alt="" aria-hidden="true">
+                        <img src="user-icon.png" alt="" aria-hidden="true">
                     </button>
 
                     <!-- Cart button (always shown on medium/small and large) -->
                     <button class="icon-btn cart" aria-label="Cart">
-                        <img src="../cart-icon.webp" alt="Cart icon">
+                        <img src="cart-icon.webp" alt="Cart icon">
                     </button>
 
                     <!-- Hamburger (visible on medium & small screens) -->
